2008-03-31  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Beth Dakin.

        Next step toward global code: Removed more obsolete API, moved
        saveLocalStorage and restoreLocalStorage to JSGlobalObject subclass,
        since it's only intended for use there.
        
        * ChangeLog:
        * JavaScriptCore.exp:
        * kjs/Activation.h:
        * kjs/JSGlobalObject.cpp:
        (KJS::JSGlobalObject::saveLocalStorage):
        (KJS::JSGlobalObject::restoreLocalStorage):
        * kjs/JSGlobalObject.h:
        * kjs/JSVariableObject.cpp:
        * kjs/JSVariableObject.h:
        (KJS::JSVariableObject::JSVariableObjectData::JSVariableObjectData):
        * kjs/function.cpp:
        (KJS::ActivationImp::ActivationImp):

2008-03-31  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Beth Dakin.

        Next step toward global code: subclass JSActivation + JSActivationData
        from JSVariableObject + JSVariableObjectData.
        
        JSActivation now relies on JSVariableObject for access to registers and
        symbol table, and for some delete functionality, but not for anything
        else yet.

        (KJS::JSActivation::mark): Cleaned up the style here a little bit.

2008-03-31  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Beth Dakin.
        
        Next step toward global code: store "rOffset" in JSVariableObjectData.

        * kjs/JSGlobalObject.h:
        (KJS::JSGlobalObject::JSGlobalObjectData::JSGlobalObjectData):
        * kjs/JSVariableObject.h:
        (KJS::JSVariableObject::JSVariableObjectData::JSVariableObjectData):

2008-03-31  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej Stachowiak.
        
        Next steps toward global code:
        
        * Moved access to the register file into JSVariableObject.
        
        * Added more ASSERTs to indicate obsolete APIs there are just hanging
        around to stave off build failures.

        * kjs/JSGlobalObject.h: